force-app/main/default/objects/RD_NEW_PosRatingRange__c/RD_NEW_PosRatingRange__c.object-meta.xml
<CustomObject>
    <label>RD NEW PosRatingRange</label>
    <nameField>
        <label>RD NEW PosRatingRange</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD NEW PosRatingRange</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>