force-app/main/default/objects/RD_NEW_PosRatingRange__c/fields/KOSHA__c.field-meta.xml
<CustomField>
    <fullName>KOSHA__c</fullName>
    <label>KOSHA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>