force-app/main/default/objects/RD_NEW_PosRatingRange__c/fields/RGRAT1__c.field-meta.xml
<CustomField>
    <fullName>RGRAT1__c</fullName>
    <label>RGRAT1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>