force-app/main/default/objects/RD_NEW_PosRatingRange__c/fields/RGTYP1__c.field-meta.xml
<CustomField>
    <fullName>RGTYP1__c</fullName>
    <label>RGTYP1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>