force-app/main/default/objects/RD_NEW_PosRatingRange__c/fields/RPVM084__c.field-meta.xml
<CustomField>
    <fullName>RPVM084__c</fullName>
    <label>RPVM084</label>
    <length>255</length>
    <type>Text</type>
</CustomField>