force-app/main/default/objects/RD_NEW_PosRatingRange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KOSHA__c</columns>
    <columns>PTC__c</columns>
    <columns>RGRAT1__c</columns>
    <columns>RGTYP1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RGRAT1__c</field>
        <operation>equals</operation>
        <value>Rated</value>
    </filters>
    <label>All</label>
</ListView>